--- a/index.css
+++ b/index.css
@@ -1420,12 +1420,12 @@
 
 
 .youtubeplayer {
-    width: 100%;
+    width: 80%;
     height: 464px;
     background: rgba(255, 255, 255, 0.05999999865889549);
     opacity: 1;
     position: relative;
-    /* margin: 1rem; */
+    margin: auto;
     /* top: 140px; */
     /* left: auto; */
     backdrop-filter: blur(25px);
@@ -1483,7 +1483,7 @@
 
 .miningmaintab {
     width: 72%;
-    height: 616px;
+    height:  592px;
     background: rgba(255, 255, 255, 0.05999999865889549);
     opacity: 1;
     position: relative;
@@ -2257,10 +2257,14 @@
     width: 100%;
     height: 0px;
     position: relative;
-    top: 0px;
-    left: 0px;
+    /* top: 0px; */
+    display: flex;
+    /* left: 0px; */
     opacity: 1;
     text-align: center;
+    justify-content: center;
+    /* align-items: center; */
+    margin-top: 1rem;
 }
 
 .futuremainhead {
@@ -2287,16 +2291,18 @@
 }
 
 .futurediscrip1 {
-    width: 868px;
+    width: 100%;
     height: 60px;
     color: rgba(255, 255, 255, 1);
     position: relative;
     top: 100px;
-    left: auto;
+    display: flex;
+    /* left: auto; */
     font-family: Bebas Neue;
     font-weight: Regular;
     font-size: 25px;
     opacity: 1;
+    justify-content: center;
 }
 
 .futurediscriptab2 {
@@ -2310,12 +2316,12 @@
 }
 
 .futurediscrip2 {
-    width: 868px;
+    width: 100%;
     height: 60px;
     color: rgba(255, 255, 255, 1);
     position: relative;
     top: 125px;
-    left: auto;
+    /* left: auto; */
     font-family: Bebas Neue;
     font-weight: Regular;
     font-size: 25px;
@@ -2323,57 +2329,63 @@
 }
 
 .futuretab {
-    width: 900px;
+    width: 85%;
     height: 679px;
     background: rgba(255, 255, 255, 0.05999999865889549);
     opacity: 1;
     position: relative;
     margin: auto;
     top: 170px;
-    left: auto;
+    /* left: auto; */
     backdrop-filter: blur(25px);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    overflow: hidden;
+    border-bottom-right-radius: 20px
 }
-
+.size{
+    display: flex;
+    width: 100%;
+    top: 1rem;
+    position: relative;
+    justify-content: center;
+}
 .laptop {
     width: 500px;
     height: 267px;
-    background: url("../images/laptop.png");
+    background: url(../images/laptop.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     opacity: 1;
-    position: absolute;
-    top: 15px;
-    left: 200px;
-    overflow: hidden;
+    position: relative;
 }
 
 .performedon {
-    width: 547px;
+    width: 100%;
     color: rgba(255, 255, 255, 1);
-    position: absolute;
-    top: 292px;
-    left: 176px;
+    position: relative;
+    top: 1.5rem;
+    /* left: 176px; */
     font-family: Bebas Neue;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
-    text-align: left;
+    text-align: center;
 }
 
 .pairtab {
-    width: 650px;
+    width: 100%;
     height: 170px;
     opacity: 1;
-    position: absolute;
-    top: 338px;
-    left: 125px;
+    position: relative;
+    /* top: 1rem; */
+    display: flex;
+    /* left: 125px; */
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
 }
 
 .btcusdt {
@@ -2549,29 +2561,27 @@
 }
 
 .tradingperform {
-    width: 221px;
+    width: 100%;
     color: rgba(255, 255, 255, 1);
-    position: absolute;
-    top: 518px;
-    left: 339px;
+    position: relative;
+    /* top: 518px; */
+    /* left: 339px; */
     font-family: Bebas Neue;
     font-weight: Regular;
     font-size: 30px;
     opacity: 1;
-    text-align: left;
+    text-align: center;
 }
 
 .binancelogo {
     width: 350px;
     height: 100px;
-    background: url("../images/binfut.png");
+    background: url(../images/binfut.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     opacity: 1;
-    position: absolute;
-    top: 564px;
-    left: 275px;
+    position: relative;
     overflow: hidden;
 }
 
@@ -3557,5 +3567,64 @@
         font-size: 25px;
         margin-top: 1rem;
         margin-left: 0;
+    }
+    .futuremainhead{
+        width: 100%;
+    font-size: 35px;
+    top: 0;
+    }
+    .futurestrading{
+        height: 215vh;
+    }
+    .futuretab{
+        top: 20rem;
+       
+    height: 157vh;
+
+    }
+    .futurediscrip1{
+font-size: 20px;
+}
+.futurediscrip2{
+    top: 11rem;
+    font-size: 20px;
+    }
+    .laptop{
+        width: 253px;
+        height: 150px;
+    }
+    .performedon{
+        font-size: 25px;
+    }
+    .pairtab{
+        flex-direction: column;
+        height: fit-content;
+    }
+
+    .btcusdt{
+        margin-bottom: 1rem;
+        margin-right: 0;
+    }
+    
+    .ethusdt{
+        margin-bottom: 1rem;
+        margin-right: 0;
+    }
+    .trxusdt{
+        margin-bottom: 1rem;
+        margin-right: 0;
+    }
+    .bnbusdt{
+        margin-bottom: 1rem;
+        margin-right: 0;
+    }
+    .tradingperform{
+    }
+
+    .binancelogo{
+        
+    width: 200px;
+    height: 50px;
+
     }
 }
